<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UtiliPaint</string>
    <string name="default_screen">Welcome! To start, create a new image with File > New… or open an existing image with File > Open…</string>
    <string name="action_settings">Settings</string>
    <string name="action_file">File</string>
    <string name="action_new">New…</string>
    <string name="action_open">Open…</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_exit">Exit</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_save_as">Save As…</string>
    <string name="action_tool_select">Select Tool…</string>
    <string name="dialog_about_message">Placeholder Text</string>
    <string name="dialog_about_title">About UtiliPaint</string>
    <string name="dialog_new_message">Are you sure you want to create a new image? The current one will be destroyed.</string>
    <string name="dialog_new_title">Confirmation</string>
    <string name="dialog_exit_message">Are you sure you want to quit? The current image will be destroyed.</string>
    <string name="dialog_exit_title">Confirmation</string>
    <string name="info_content">Program Info</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="iconCD">Tool Icon</string>
    <string name="pan_zoom_title_text">Pan/Zoom Tool</string>
    <string name="brush_title_text">Brush Tool</string>
    <string name="eraser_title_text">Eraser Tool</string>
    <string name="color_selection_title_text">Color Selection Tool</string>
    <string name="magic_wand_title_text">Magic Wand Tool</string>
    <string name="move_pixels_title_text">Move Pixels Tool</string>
    <string name="paint_bucket_title_text">Paint Bucket Tool</string>
    <string name="selection_title_text">Selection Tool</string>
    <string name="shape_title_text">Shape Tool</string>
    <string name="text_title_text">Text Tool</string>
    <string name="pan_zoom_desc_text">Move around the image, or zoom into the image.</string>
    <string name="brush_desc_text">Paint directly on the image with a brush.</string>
    <string name="eraser_desc_text">Erase part of the image.</string>
    <string name="color_selection_desc_text">Change the current color swatch to an image color.</string>
    <string name="magic_wand_desc_text">Select all pixels of a desired color on the image.</string>
    <string name="move_pixels_desc_text">Move a selection of pixels around.</string>
    <string name="paint_bucket_desc_text">Flood fill a part of the image with a color.</string>
    <string name="selection_desc_text">Select part of the image with a rectangle.</string>
    <string name="shape_desc_text">Make a shape.</string>
    <string name="text_desc_text">Write text onto the image.</string>
    <string name="move_pixels_status_title_text">Status</string>

</resources>