<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_open"/>
    <item
        android:id="@+id/action_save"
        android:enabled="false"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_save"
        android:visible="false"/>
    <item
        android:id="@+id/action_save_as"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_save_as"
        android:visible="false"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_exit"/>

</menu>