<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_tool_select"
        android:showAsAction="ifRoom"
        android:actionLayout="@layout/action_tool_select"  />
    
    <item
        android:id="@+id/action_file"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_file"/>
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"/>

</menu>